--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "framer-motion": "^6.2.8",
     "next": "12.1.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "remark": "^14.0.2",
+    "remark-html": "^15.0.1"
   },
   "devDependencies": {
     "eslint": "8.11.0",
